regen spec and client code
