# src/routes/routes.ts
@@ -38,33 +38,43 @@ const models: TsoaRoute.Models = {
     properties: {
       id: { dataType: 'double', required: true },
       report: { ref: 'EnrollmentReport', required: true },
-      sasid: { dataType: 'double' },
       name: { dataType: 'string' },
+      sasid: { dataType: 'double' },
       dateOfBirth: { dataType: 'datetime' },
       birthCertificateId: { dataType: 'string' },
       townOfBirth: { dataType: 'string' },
       stateOfBirth: { dataType: 'string' },
-      race: { dataType: 'string' },
-      ethnicity: { dataType: 'string' },
+      americanIndianOrAlaskaNative: { dataType: 'boolean' },
+      asian: { dataType: 'boolean' },
+      blackOrAfricanAmerican: { dataType: 'boolean' },
+      nativeHawaiianOrPacificIslander: { dataType: 'boolean' },
+      white: { dataType: 'boolean' },
+      hispanicOrLatinxEthnicity: { dataType: 'boolean' },
       gender: { dataType: 'string' },
+      dualLanguageLearner: { dataType: 'boolean' },
       receivingSpecialEducationServices: { dataType: 'boolean' },
       specialEducationServicesType: { dataType: 'string' },
-      address: { dataType: 'string' },
+      addressLine1: { dataType: 'string' },
+      addressLine2: { dataType: 'string' },
+      town: { dataType: 'string' },
+      state: { dataType: 'string' },
+      zipcode: { dataType: 'string' },
       livesWithFosterFamily: { dataType: 'boolean' },
       experiencedHomelessnessOrHousingInsecurity: { dataType: 'boolean' },
       householdSize: { dataType: 'double' },
       annualHouseholdIncome: { dataType: 'double' },
       incomeDeterminationDate: { dataType: 'datetime' },
+      provider: { dataType: 'string' },
+      site: { dataType: 'string' },
+      model: { dataType: 'string' },
+      ageGroup: { dataType: 'string' },
       enrollmentStartDate: { dataType: 'datetime' },
       enrollmentEndDate: { dataType: 'datetime' },
       enrollmentExitReason: { dataType: 'string' },
-      firstFundingPeriod: { dataType: 'string' },
-      lastFundingPeriod: { dataType: 'string' },
-      site: { dataType: 'string' },
-      ageGroup: { dataType: 'string' },
       fundingType: { dataType: 'string' },
       spaceType: { dataType: 'string' },
-      model: { dataType: 'string' },
+      firstFundingPeriod: { dataType: 'string' },
+      lastFundingPeriod: { dataType: 'string' },
       receivingCareForKids: { dataType: 'boolean' },
     },
     additionalProperties: false,
@@ -106,7 +116,7 @@ const models: TsoaRoute.Models = {
         array: { ref: 'IncomeDetermination' },
       },
       children: { dataType: 'array', array: { ref: 'Child' } },
-      organization: { ref: 'Organization', required: true },
+      organization: { ref: 'Organization' },
       updateMetaData: { ref: 'UpdateMetaData' },
     },
     additionalProperties: false,
